fix line wrapping in warn/errors

--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -107,7 +107,6 @@ p {
 			display: block;
 			font-weight: 500;
 			padding: $padding_base 0;
-			height: $line_height;
 			position: absolute;
 			text-align: center;
 			top: -$error_size;
